----------------------------------

  Changes that may be incompatible with existing scripts:

   Implement feature request 3418525 -  Switch to a standard logging
   framework. The net.grinder.common.Logger/FilenameFactory API has been
   removed in favor of SLF4J. Output and error messages are logged to
   a single log file. The log file and the data log file are managed by
   Logback.

  Other changes:

   The Java instrumenter supports selective instrumentation of a target
   object through an overloaded version of Test.record(). The full
   HTTPRequest interface can now be used with DCR instrumentation without
   requiring a replacement for the traditional instrumenter's __target__.

   Fix bug 3006631 - Null pointer exception when posting multipart
   form data. Thanks to Edwin Clubb for the report, and to Ouray Viney
   for testing the fix.

   Fix bug 3431764 - DCR instrumentation fails with Java 7. Thanks to
   Gary Mulder for the report.

   Fix bug 3133650 - Relative classpath issues when using the console. The
   agent process now translates relative paths in the classpath to the
   different working directory when workers are launched with scripts
   distributed by the console. Thanks to Jared C for the report.

   The Grinder is now built using Apache Maven.

   Tentative fix for bug 3459637 - AWT-EventQueue NullPointerException.
   Thanks to Richard Lynch for the report.

   Fix bug 3464547 - DCR instrumentation of unbound PyMethods doesn't work.

   Fix bug 3464533 - DCR instrumentation of bound PyMethods doesn't work.

   The TCPProxy can be called with "-http clojure" to generate a Clojure
   script.

   The TCPProxy can be called with "-http jython" to generate a Jython
   script that uses the new (DCR) instrumentation. DCR instrumentation
   will be enabled by default in the next release of The Grinder. This is
   the final release of The Grinder that supports Java SE 5.


The Grinder 3.6
---------------
