@@ -35,11 +35,7 @@
   <table class="noborder">
     <tr>
       <td><a href="ext:oracle/java/javase">Java Standard Edition
-      5</a>, equivalent, or later</td><td>For The Grinder 3.</td>
-    </tr>
-    <tr>
-      <td><a href="ext:oracle/java/javase">Java Standard Edition
-      6</a>, equivalent, or later</td><td>For The Grinder 3 with the <a href="site:g3/scripts/script-instrumentation/new-instrumentation">new instrumentation</a>.</td>
+      6</a>, equivalent, or later</td><td>For The Grinder 3.</td>
     </tr>
     <tr>
       <td><a href="ext:oracle/java/javase">Java 2 Standard Edition
@@ -48,7 +44,8 @@
     <tr>
       <td><a href="ext:oracle/java/jsse/">
         JSSE (Java Secure Socket Extension) 1.0.2</a></td>
-      <td>For SSL support with The Grinder 2.<br/>JSSE is a standard part of Java 2 Standard Edition 1.4.1 and later.
+      <td>For SSL support with The Grinder 2.
+      <br/>JSSE is a standard part of Java 2 Standard Edition 1.4.1 and later, so this extension is not requried for The Grinder 3.
       </td>
     </tr>
   </table>
